--- a/src/pages/jp.astro
+++ b/src/pages/jp.astro
@@ -3,4 +3,4 @@ import LandingPage from '@/components/LandingPage.astro'
 import { LANDING_PAGE } from '@/i18n/ui'
 ---
 
-<LandingPage t={LANDING_PAGE.sr} />
+<LandingPage t={LANDING_PAGE.jp} />
