--- a/src/components/navigation/Nav.astro
+++ b/src/components/navigation/Nav.astro
@@ -91,6 +91,21 @@ const docs: MarkdownRecord[] = await getDocs()
             fill-rule="evenodd"></path></svg
         >
       </a>
+      <a
+        class="mr-10 hover:opacity-70 w500:hidden"
+        target="_blank"
+        href="https://x.com/ame_sph"
+      >
+        <svg
+          class="h-6 w-6"
+          xmlns="http://www.w3.org/2000/svg"
+          viewBox="0 0 24 24"
+          ><path
+            class="fill-lightModeIcon transition-colors dark:fill-darkModeIcon"
+            d="M18.244 2.25h3.308l-7.227 8.26 8.502 11.24H16.17l-5.214-6.817L4.99 21.75H1.68l7.73-8.835L1.254 2.25H8.08l4.713 6.231zm-1.161 17.52h1.833L7.084 4.126H5.117z"
+            fill-rule="evenodd"></path></svg
+        >
+      </a>
       <div class="w500:hidden">
         <ThemeSwitcher />
       </div>
