Clean up repository: remove unused template pages and add logos

--- a/src/components/LandingPage.astro
+++ b/src/components/LandingPage.astro
@@ -1,6 +1,7 @@
 ---
 import Base from '@/layouts/Base.astro'
 import {
+  GITHUB_REPO_URL,
   GET_STARTED_LINK,
   PROJECT_NAME,
   DEFAULT_LANGUAGE_CODE,
@@ -26,10 +27,25 @@ const lang = Astro.url.pathname.split('/')[1] || DEFAULT_LANGUAGE_CODE
         >
           {t.description}
         </p>
+        
+        <!-- Logo decoration above About Me button -->
+        <div class="mt-12 flex justify-center w600:mt-9">
+          <img 
+            src="/images/logo4_day.png" 
+            alt="Blog decoration logo" 
+            class="h-20 w-auto opacity-80 hover:opacity-100 transition-opacity duration-300 w600:h-18 w400:h-16 dark:hidden"
+          />
+          <img 
+            src="/images/logo4_night.png" 
+            alt="Blog decoration logo" 
+            class="h-20 w-auto opacity-80 hover:opacity-100 transition-opacity duration-300 w600:h-18 w400:h-16 hidden dark:block"
+          />
+        </div>
+        
         <div class="mt-12 flex items-center w600:mt-9">
           <a
             href={`/${lang}${GET_STARTED_LINK}`}
-            class="flex h-12 items-center justify-center rounded-base border-2 border-[#374151] px-6 text-center text-lg text-[#374151] transition-all hover:bg-[#374151] hover:text-white dark:border-[#e5e7eb] dark:text-[#e5e7eb] dark:hover:bg-[#e5e7eb] dark:hover:text-[#2b5876] w600:text-base w400:h-10 w400:px-3"
+            class="flex h-12 items-center justify-center rounded-base border border-[#374151] px-6 text-center text-lg text-[#374151] transition-all hover:bg-[#374151] hover:text-white dark:border-[#e5e7eb] dark:text-[#e5e7eb] dark:hover:bg-[#e5e7eb] dark:hover:text-[#2b5876] w600:text-base w400:h-10 w400:px-3"
             >{t.getStartedBtnText}
           </a>
         </div>
